--- a/staff/add_reservations.html
+++ b/staff/add_reservations.html
@@ -13,6 +13,8 @@
     <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+<!-- Font Awesome CDN -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
 
     <!-- from booking css -->
@@ -92,10 +94,10 @@
 
                     <li class="sidebar-item">
                         <a href="../staff/staff_services.html" class="sidebar-link">
-                            <i class="fa-solid fa-diagram-next pe-2"></i>
-                            Additional Services
+                          <i class="fa-solid fa-square-plus pe-2"></i>
+                          Additional Services
                         </a>
-                    </li>
+                      </li>
 
                     <li class="sidebar-item">
                         <a href="../staff/housekeeping.html" class="sidebar-link">
