--- a/staff/dashboard.html
+++ b/staff/dashboard.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" />
   <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet" />
+  <!-- Font Awesome CDN -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   <link rel="stylesheet" href="../staff/css/dashboard.css" />
@@ -85,7 +87,7 @@
 
           <li class="sidebar-item">
             <a href="../staff/staff_services.html" class="sidebar-link">
-              <i class="fa-solid fa-diagram-next pe-2"></i>
+              <i class="fa-solid fa-square-plus pe-2"></i>
               Additional Services
             </a>
           </li>
