--- a/staff/staff_rooms.html
+++ b/staff/staff_rooms.html
@@ -13,6 +13,8 @@
   <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet" />
 
+  <!-- Font Awesome CDN -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -90,7 +92,7 @@
 
           <li class="sidebar-item">
             <a href="../staff/staff_services.html" class="sidebar-link">
-              <i class="fa-solid fa-diagram-next pe-2"></i>
+              <i class="fa-solid fa-square-plus pe-2"></i>
               Additional Services
             </a>
           </li>
@@ -130,7 +132,7 @@
 
 
 
-          <div class="container-fluid p-4">
+          <div class="container-fluid p-0">
             <div class="card shadow">
               <!-- Add this button just below the card-header div -->
               <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
